Fix scrollbar behaviour

--- a/src/ui/components/_dropdown.scss
+++ b/src/ui/components/_dropdown.scss
@@ -42,7 +42,7 @@
     border-radius: $ui-border-radius;
     z-index: 1000;
     max-height: 500px;
-    overflow-y: scroll;
+    overflow-y: auto;
 
     .ui-dropdown-item {
       @include user-select(none);
