--- a/src/ui/components/_modal.scss
+++ b/src/ui/components/_modal.scss
@@ -12,7 +12,7 @@ body.ui-modal-attached {
   right: 0;
   left: 0;
   z-index: 1000;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   &.ui-modal-open {
     display: block;
@@ -58,7 +58,7 @@ body.ui-modal-attached {
     opacity: 0;
     overflow: hidden;
     max-height: 90vh;
-    overflow-y: scroll;
+    overflow-y: auto;
 
     .ui-modal-header, .ui-modal-footer {
       padding: 20px;
